# cevil

./: .gitignore  CMakeLists.txt  README.md  basic_objects.hpp  main.cpp  modloader.cpp  utility.hpp
__game/: Cevil.lnk  note.txt
__game/engine/: config.cfg
__internal/: global.hpp  objects.hpp  preprocessor.hpp
cpp/: main.cpp  maploader.cpp  nodes.hpp
cpp/core/: fundamentals.hpp  nodes.hpp  sdl.hpp  self.cpp  self.hpp
cpp/internal/: global.hpp  objects.hpp  preprocessor.hpp  serialcocksucker.hpp  utility.hpp
cpp/maploader/: self.cpp  self.hpp
cpp/modloader/: self.cpp  self.hpp
game/: main.cpp
game/client/: self.cpp  self.hpp
game/core/: fundamentals.cpp  fundamentals.hpp  include.hpp  nodes.cpp  nodes.hpp  sdl.hpp  self.cpp  self.hpp
game/internal/: global.hpp  include  include.hpp  preprocessor.hpp  serialcocksucker.hpp  utility.hpp  wrappers.hpp
game/maploader/: self.cpp  self.hpp
game/modloader/: include  self.cpp  self.hpp
server/: autorun.cmd  autorun.sh  compile.cmd  compile.sh  encrypt.ts  entry.ts  server.ts
server/include/: type_traits.d.ts
server/module/: server.ts  type_traits.ts  xutility.ts
